# Agents

./: .env.example  .gitignore  README.md  RELEASE_NOTES.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt  test_playwright_chrome.py
app/receipts/: __init__.py  interfaces.py  llm_integrator.py  prompts.py  receipt_parser.py  schemas.py
docs/: setup.md  testing_policy.md
docs/templates/: test_case_template.md  test_execution_report_template.md  test_mapping_jenkins_playwright_testops.md
pattern_specs/: yandex_mail_agent_spec.md
scripts/: smoke_imap.py  smoke_playwright.py
tests/contract/: test_interfaces.py  test_schema_contract_stub.py
tests/e2e/: test_daily_run_stub.py
tests/integration/: test_batch9_smoke_orchestrator.py  test_dispatcher_receipt_parser_integration.py  test_imap_smtp.py  test_mail_fetch_stub.py  test_playwright.py  test_smoke_orchestrator_mail_gate.py  test_t040_parser_dispatcher_no_mock.py  test_t041_browser_driver_real_urls.py  test_t042_browser_artifacts.py  test_t043_xlsx_generation.py  test_t044_xlsx_validation.py  test_t045_smtp_delivery.py  test_t046_smtp_mime_integration.py
tests/integration/receipts/: test_receipt_parser_with_ollama.py
tests/unit/: test_contracts_stub.py  test_dedup.py  test_dispatcher.py  test_parser.py
tests/unit/receipts/: test_llm_integrator.py  test_receipt_parser.py
tools/: __init__.py
